# openalex-semsearch-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  _config.yml  demo.html  pyproject.toml
.github/workflows/: ci.yml
docs/: references.md
examples/: README.md  agentic-workflows-2026-clusters.json  agentic-workflows-2026-raw.json  agentic-workflows-2026.json
examples/agentic-workflows-2026/: README.md  clusters.json  raw.json
examples/demo/: demo.cast  demo.sh  record.sh
examples/web-terminal/: README.md  serve.sh  web-shell.sh
src/openalex_cli/: __init__.py  cli.py  client.py  clustering.py  config.py  ssl_setup.py
