[project]
name = "openalex-cli"
version = "0.1.0"
description = "CLI para OpenAlex: búsqueda semántica de artículos y análisis de clusters por impacto"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Diego Romero" }]
dependencies = [
    "typer>=0.15",
    "httpx>=0.28",
    "truststore>=0.10",
    "python-dotenv>=1.0",
    "rich>=13.9",
    "openai>=1.60",
    "scikit-learn>=1.6",
    "numpy>=2.2",
    "umap-learn>=0.5.6",
]

[project.scripts]
oa = "openalex_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openalex_cli"]
